PYFILES = \
    bz_connection.py \
    dump_dir.py \
    problem_data.py \
    utils.py \
    configuration_files.py \
    global_configuration.py \
    problem_formatter.py \
    reported_to.py \
    const.py \
    iso_date_string.py \
    problem_utils.py \
    report_result.py

if BUILD_PYTHON3
py3clientdir = $(py3execdir)/reportclient/internal

py3client_PYTHON = $(PYFILES)
endif

clean:
	rm -rf __pycache__

all:

